--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>Our Story</h2>
-                    <p>Founded with a passion for natural skincare, Willow Soaps began as a small family business dedicated to creating pure, organic soap products that nurture both your skin and the environment.</p>
+                    <p>Founded with a passion by Twinkle Verma for natural skincare, Willow Soaps began as a small family business dedicated to creating pure, organic soap products that nurture both your skin and the environment.</p>
                     <p>We believe that what you put on your body is just as important as what you put in it. That's why we source only the finest organic ingredients and use traditional soap-making methods that have been perfected over generations.</p>
                     <p>Every bar of soap we create is a testament to our commitment to quality, sustainability, and the wellbeing of our customers and community.</p>
                 </div>
@@ -825,22 +825,23 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <strong>Email:</strong><br>
-                            hello@willowsoaps.com
+                            info.willowsoaps@gmail.com
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <strong>Phone:</strong><br>
-                            +1 (555) WILLOW-1
+                            +91 8882073364
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <strong>Address:</strong><br>
-                            123 Artisan Way<br>
-                            Craft City, CC 12345
+                            Near GRV Intercollege,
+                            Pathanpura, Rath(dist. Hamirpur)
+                            Uttarpradesh, India - 210431
                         </div>
                     </div>
                     <div class="contact-item">
